Added CSS for header and added links in header. Also wrapped the click functions for buttons in a ready event.

--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,14 @@ Author: Skyhawk Everheart
 #userOutputView {
     display: none;
 }
+
+#userInputView {
+    display: inline-block;
+}
+
+/* Header Styles Section */
+header {
+    background: darkcyan;
+    width: 100%;
+    padding-top: 30px;
+}
