Added CSS to prevent user resizing textarea.
Signed-off-by: Skyhawk Everheart <ean.baker@me.com>

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ body {
     border: solid black 3px;
     display: flex;
     flex-direction: column;
+    resize: none;
 }
 
 #userInputView label {
